--- a/styles/colors.less
+++ b/styles/colors.less
@@ -3,18 +3,18 @@
 // http://ethanschoonover.com/solarized#the-values
 
 // Background/Foreground Tones
-@base03: #002b36;
-@base02: #073642;
+@base03: #0f0f0f;
+@base02: #1a1a1a;
 
 // Content Tones
-@base01: #586e75;
-@base00: #657b83;
-@base0: #839496;
-@base1: #93a1a1;
+@base01: #4d4d4d;
+@base00: #5c5c5c;
+@base0: #6e6e6e;
+@base1: #7a7a7a;
 
 // Background/Foreground Tones
-@base2: #eee8d5;
-@base3: #fdf6e3;
+@base2: #c7c7c7;
+@base3: #d6d6d6;
 
 // Accent Colors
 @yellow: #b58900;
