--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -51,7 +51,7 @@
     }
   }
   &.other.attribute-name {
-    color: @syntax-subtle-color;
+    color: @violet;
   }
 }
 
@@ -76,7 +76,7 @@
     &.html,
     &.begin,
     &.end {
-      color: @syntax-comment-color;
+      color: @magenta;
     }
   }
 }
