--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -97,6 +97,8 @@
 }
 
 .meta.brace,
-.bracket.round {
+.bracket.round,
+.punctuation.definition.begin,
+.punctuation.definition.end {
     color: @orange;
 }
