fix string quotes

--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -98,7 +98,7 @@
 
 .meta.brace,
 .bracket.round,
-.punctuation.definition.begin,
-.punctuation.definition.end {
+.punctuation.definition.begin:not(.string),
+.punctuation.definition.end:not(.string) {
     color: @orange;
 }
