fix comment styles

--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -2,6 +2,13 @@
 .comment {
   color: @syntax-comment-color;
   font-style: italic;
+
+  .punctuation.definition {
+    color: @syntax-comment-color;
+  }
+  .todo {
+    color: @magenta;
+  }
 }
 
 .string {
