makefile built-in variable color

--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -113,6 +113,12 @@
     }
 }
 
-.makefile.name.function {
+.makefile {
+  &.name.function {
     color: @yellow;
+  }
+
+  &.variable.language {
+    color: @magenta;
+  }
 }
