don't override HTML on </script> (fixes #2)

--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -11,7 +11,7 @@
   .entity.name.type {
     color: @yellow;
   }
-  .entity.name {
+  .entity.name:not(.tag.html) {
     color: @syntax-text-color;
   }
 
