workaround JS empty block highlighting (fixes #3)

--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -105,7 +105,8 @@
 
 .meta.brace,
 .bracket.round,
-.punctuation.definition {
+.punctuation.definition,
+.punctuation.scope {
     color: @orange;
 
     &.string {
