fix some css-in-html issues

--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -75,16 +75,12 @@
   }
 }
 
-.tag {
+.html.tag {
   &.entity.name {
     color: @blue;
   }
   &.punctuation.definition {
-    &.html,
-    &.begin,
-    &.end {
-      color: @magenta;
-    }
+    color: @magenta;
   }
 }
 
