--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -75,17 +75,16 @@
   }
 }
 
-.html.tag {
+.html.tag, .xml.tag {
   &.entity.name {
     color: @blue;
   }
   &.punctuation.definition {
     color: @magenta;
   }
-}
-
-.doctype {
-    color: @yellow;
+  .doctype {
+      color: @yellow;
+  }
 }
 
 .invalid {
