--- a/styles/colors.less
+++ b/styles/colors.less
@@ -11,7 +11,7 @@
 @base00: #5c5c5c;
 @base0: #6e6e6e;
 @base1: #7a7a7a;
-@base11: #9c9c9c;
+@base11: #8b8b8b;
 
 // Background/Foreground Tones
 @base2: #c7c7c7;
