--- a/index.less
+++ b/index.less
@@ -7,6 +7,7 @@
 // Languages
 @import "languages/_base";
 @import "languages/c";
+@import "languages/cs";
 @import "languages/coffee";
 @import "languages/css";
 @import "languages/go";
