--- a/styles/languages/cs.less
+++ b/styles/languages/cs.less
@@ -1,6 +1,6 @@
-.source.cs {
-	.punctuation.section.begin,
-	.punctuation.section.end {
+.syntax--source.syntax--cs {
+	.syntax--punctuation.syntax--section.syntax--begin,
+	.syntax--punctuation.syntax--section.syntax--end {
 		color: @orange;
 	}
 }
