--- a/styles/languages/css.less
+++ b/styles/languages/css.less
@@ -1,60 +1,60 @@
-.source.css {
+.syntax--source.syntax--css {
 
-  .punctuation {
-    &.separator,
-    &.terminator {
+  .syntax--punctuation {
+    &.syntax--separator,
+    &.syntax--terminator {
       color: @syntax-text-color;
     }
-    &.property-list.begin,
-    &.property-list.end {
+    &.syntax--property-list.syntax--begin,
+    &.syntax--property-list.syntax--end {
       color: @orange;
     }
-    &.section.function {
+    &.syntax--section.syntax--function {
       color: @cyan;
     }
   }
 
-  .entity.name.css {
+  .syntax--entity.syntax--name.syntax--css {
     color: @green;
   }
-  .attribute-name.class,
-  .id {
+  .syntax--attribute-name.syntax--class,
+  .syntax--id {
     color: @blue;
   }
-  .pseudo-element,
-  .pseudo-class {
+  .syntax--pseudo-element,
+  .syntax--pseudo-class {
     color: @orange;
   }
 
-  .property-value {
+  .syntax--property-value {
     color: @cyan;
   }
-  .constant.numeric {
+  .syntax--constant.syntax--numeric {
     color: @cyan;
-    .unit {
+    .syntax--unit {
       color: @cyan;
     }
   }
-  .rgb-value {
+  .syntax--rgb-value {
     color: @cyan;
   }
-  .support.constant {
+  .syntax--support.syntax--constant {
     color: @cyan;
-    &.media {
+    &.syntax--media {
       color: @red;
     }
   }
 
-  .keyword.important {
+  .syntax--keyword.syntax--important {
     color: @red;
   }
 
-  .property-name {
+  .syntax--property-name {
       color: @yellow;
   }
 
-  .attribute-selector {
-    .punctuation, .attribute-name {
+  .syntax--attribute-selector {
+    .syntax--punctuation, .syntax--attribute-name {
       color: @violet;
     }
   }
@@ -64,18 +64,18 @@
 // Less/Sass should have their own files,
 // but for just a single override, here should be fine too
 
-.source.less,
-.source.scss {
-  .keyword.unit {
+.syntax--source.syntax--less,
+.syntax--source.syntax--scss {
+  .syntax--keyword.syntax--unit {
     color: @cyan;
   }
-  .entity {
+  .syntax--entity {
       color: @green;
   }
 }
 
-.source.stylus {
-  .selector {
+.syntax--source.syntax--stylus {
+  .syntax--selector {
     color: @green;
   }
 }
