--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -1,75 +1,75 @@
-.source.js {
+.syntax--source.syntax--js {
 
-  .comma {
+  .syntax--comma {
     color: @syntax-text-color;
   }
 
-  .support.class {
+  .syntax--support.syntax--class {
     color: @green;
   }
 
-  .entity.name.type {
+  .syntax--entity.syntax--name.syntax--type {
     color: @yellow;
   }
-  .entity.name:not(.tag.html) {
+  .syntax--entity.syntax--name:not(.syntax--tag.syntax--html) {
     color: @syntax-text-color;
   }
 
-  .keyword:not(.operator) {
+  .syntax--keyword:not(.syntax--operator) {
     color: @syntax-text-color;
   }
-  .keyword.operator.new {
+  .syntax--keyword.syntax--operator.syntax--new {
     color: @green;
   }
-  .keyword.control {
+  .syntax--keyword.syntax--control {
     color: @green;
   }
-  .keyword.control.regexp {
+  .syntax--keyword.syntax--control.syntax--regexp {
     color: @cyan;
   }
 
-  .variable {
+  .syntax--variable {
     color: @blue;
   }
-  .variable.parameter {
+  .syntax--variable.syntax--parameter {
     color: @syntax-text-color;
   }
 
-  .regexp {
+  .syntax--regexp {
     color: @cyan;
   }
 
-  .support.function {
+  .syntax--support.syntax--function {
     color: @violet;
   }
-  .support.constant {
+  .syntax--support.syntax--constant {
     color: @syntax-text-color;
   }
 
-  .punctuation.terminator.statement {
+  .syntax--punctuation.syntax--terminator.syntax--statement {
     color: @syntax-text-color;
   }
 
-  .meta.delimiter.method.period {
+  .syntax--meta.syntax--delimiter.syntax--method.syntax--period {
     color: @syntax-text-color;
   }
-  .string.quoted.template {
-    .embedded.source {
+  .syntax--string.syntax--quoted.syntax--template {
+    .syntax--embedded.syntax--source {
       color: @syntax-text-color;
-      & > .embedded.punctuation {
+      & > .syntax--embedded.syntax--punctuation {
         color: @red;
       }
     }
   }
 
-  .definition.parameters {
-    &.begin, &.end {
+  .syntax--definition.syntax--parameters {
+    &.syntax--begin, &.syntax--end {
         color: @orange;
     }
   }
 }
-.source.js.jsx {
-  .entity.name.tag {
+.syntax--source.syntax--js.syntax--jsx {
+  .syntax--entity.syntax--name.syntax--tag {
     color: @blue;
   }
 }
