--- a/index.less
+++ b/index.less
@@ -1,21 +1,21 @@
-@import "colors";
-@import "syntax-variables";
+@import "styles/colors";
+@import "styles/syntax-variables";
 
 // Editor
-@import "editor";
+@import "styles/editor";
 
 // Languages
-@import "languages/_base";
-@import "languages/c";
-@import "languages/cs";
-@import "languages/coffee";
-@import "languages/css";
-@import "languages/go";
-@import "languages/java";
-@import "languages/javascript";
-@import "languages/markdown";
-@import "languages/markup";
-@import "languages/php";
-@import "languages/python";
-@import "languages/ruby";
-@import "languages/scala";
+@import "styles/languages/_base";
+@import "styles/languages/c";
+@import "styles/languages/cs";
+@import "styles/languages/coffee";
+@import "styles/languages/css.less";
+@import "styles/languages/go";
+@import "styles/languages/java";
+@import "styles/languages/javascript";
+@import "styles/languages/markdown";
+@import "styles/languages/markup";
+@import "styles/languages/php";
+@import "styles/languages/python";
+@import "styles/languages/ruby";
+@import "styles/languages/scala";
