--- a/styles/languages/css.less
+++ b/styles/languages/css.less
@@ -33,7 +33,7 @@
         &.syntax--class
         {
             color: @blue;
-            .syntax--punctuation
+            & > .syntax--punctuation
             {
                 color: inherit;
             }
@@ -41,7 +41,7 @@
         &.syntax--id
         {
             color: @magenta;
-            .syntax--punctuation
+            & > .syntax--punctuation
             {
                 color: inherit;
             }
@@ -64,7 +64,7 @@
     .syntax--at-rule
     {
         color: @magenta;
-        .syntax--punctuation.syntax--definition
+        & > .syntax--punctuation
         {
             color: inherit;
         }
