clean up grayscale tones

--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,23 +1,13 @@
-
-// Solarized color scheme
-// http://ethanschoonover.com/solarized#the-values
-
 // Background/Foreground Tones
-@base03: #0f0f0f;
-@base02: #1a1a1a;
+@grayscale_00: #0f0f0f; // background
+@grayscale_10: #1a1a1a; // selection: background, gutter: background
+@grayscale_20: #272727; // guides & invis chars, gutter: selection background
+@grayscale_30: #6e6e6e; // gutter text, comments
+@grayscale_40: #8b8b8b; // text color
+@grayscale_50: #aeaeae; // search results: other, selection: flash
+@grayscale_60: #e3e3e3; // cursor, search results: selected
 
-// Content Tones
-@base01: #4d4d4d;
-@base00: #5c5c5c;
-@base0: #6e6e6e;
-@base1: #7a7a7a;
-@base11: #8b8b8b;
-
-// Background/Foreground Tones
-@base2: #c7c7c7;
-@base3: #d6d6d6;
-
-// Accent Colors
+// Colors
 @yellow: #b58900;
 @orange: #cb4b16;
 @red: #dc322f;
