--- a/styles/languages/java.less
+++ b/styles/languages/java.less
@@ -42,6 +42,6 @@
     }
   }
   .syntax--punctuation.syntax--definition.syntax--method-parameters{
-    color: @syntax-emphasized-color;
+    color: @syntax-text-color;
   }
 }
