--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -4,26 +4,26 @@
 // include a syntax-variables.less file.
 
 // General colors
-@syntax-text-color: @base11;
-@syntax-cursor-color: @base3;
-@syntax-selection-color: @base02;
-@syntax-selection-flash-color: @base1;
-@syntax-background-color: @base03;
+@syntax-text-color: @grayscale_40;
+@syntax-cursor-color: @grayscale_60;
+@syntax-selection-color: @grayscale_10;
+@syntax-selection-flash-color: @grayscale_50;
+@syntax-background-color: @grayscale_00;
 
 // Guide colors
-@syntax-wrap-guide-color: lighten(@base02, 6%);
-@syntax-indent-guide-color: lighten(@base02, 6%);
-@syntax-invisible-character-color: lighten(@base02, 6%);
+@syntax-invisible-character-color: @grayscale_20;
+@syntax-wrap-guide-color: @syntax-invisible-character-color;
+@syntax-indent-guide-color: @syntax-invisible-character-color;
 
 // For find and replace markers
-@syntax-result-marker-color: @cyan;
-@syntax-result-marker-color-selected: @base3;
+@syntax-result-marker-color: @grayscale_50;
+@syntax-result-marker-color-selected: @syntax-cursor-color;
 
 // Gutter colors
-@syntax-gutter-text-color: @base0;
+@syntax-gutter-text-color: @grayscale_30;
 @syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @base02;
-@syntax-gutter-background-color-selected: lighten(@base02, 3%);
+@syntax-gutter-background-color: @grayscale_10;
+@syntax-gutter-background-color-selected: @grayscale_20;
 
 // For git diff info. i.e. in the gutter
 @syntax-color-added: @green;
@@ -49,6 +49,4 @@
 // Custom variables
 // Warning: Don't use in packages
 
-@syntax-comment-color: @base01;
-@syntax-subtle-color: @base00;
-@syntax-emphasized-color: @base1;
+@syntax-comment-color: @grayscale_30;
