css & preprocessor styles

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -25,6 +25,7 @@ atom-text-editor {
     border-color: @syntax-cursor-color;
   }
 
+  // TODO this doesn't seem to work anymore?
   .selection .region {
     background-color: @syntax-selection-color;
   }
