HTML styles; may do more once tree-sitter properly tags everything (see #9)

--- a/index.less
+++ b/index.less
@@ -11,7 +11,7 @@
 //@import "styles/languages/coffee";
 @import "styles/languages/css.less";
 //@import "styles/languages/go";
-//@import "styles/languages/html";
+@import "styles/languages/html";
 //@import "styles/languages/java";
 //@import "styles/languages/javascript";
 //@import "styles/languages/makefile";
@@ -21,3 +21,4 @@
 //@import "styles/languages/python";
 //@import "styles/languages/ruby";
 //@import "styles/languages/scala";
+ 
