cleanup, add editorconfig

--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -21,9 +21,7 @@
 }
 
 .syntax--constant {
-  &.syntax--numeric, &.syntax--language {
-    color: @syntax-color-constant;
-  }
+  &.syntax--numeric, &.syntax--language,
   &.syntax--character, &.syntax--other {
     color: @syntax-color-constant;
   }
