--- a/index.less
+++ b/index.less
@@ -11,10 +11,11 @@
 @import "styles/languages/css.less";
 //@import "styles/languages/go";
 @import "styles/languages/html";
-//@import "styles/languages/java";
+@import "styles/languages/javascript";
 //@import "styles/languages/makefile";
 @import "styles/languages/markdown";
 //@import "styles/languages/markup";
 //@import "styles/languages/php";
 //@import "styles/languages/ruby";
 //@import "styles/languages/scala";
+ 
