--- a/index.less
+++ b/index.less
@@ -6,7 +6,7 @@
 
 // Languages
 @import "styles/languages/_base";
-//@import "styles/languages/c";
+@import "styles/languages/c";
 //@import "styles/languages/coffee";
 @import "styles/languages/css.less";
 //@import "styles/languages/go";
