shell & batch files

--- a/index.less
+++ b/index.less
@@ -6,6 +6,7 @@
 
 // Languages
 @import "styles/languages/_base";
+@import "styles/languages/batch";
 @import "styles/languages/c";
 //@import "styles/languages/coffee";
 @import "styles/languages/css.less";
@@ -18,3 +19,4 @@
 //@import "styles/languages/php";
 //@import "styles/languages/ruby";
 //@import "styles/languages/scala";
+@import "styles/languages/shell";
