--- a/index.less
+++ b/index.less
@@ -13,7 +13,7 @@
 //@import "styles/languages/go";
 @import "styles/languages/html";
 @import "styles/languages/javascript";
-//@import "styles/languages/makefile";
+@import "styles/languages/makefile";
 @import "styles/languages/markdown";
 //@import "styles/languages/markup";
 //@import "styles/languages/php";
