--- a/styles/languages/makefile.less
+++ b/styles/languages/makefile.less
@@ -6,4 +6,13 @@
   &.syntax--variable.syntax--language {
     color: @magenta;
   }
+
+  .syntax--variable {
+      color: @blue;
+
+      &.syntax--punctuation,
+      &.syntax--special.syntax--other {
+          color: @orange;
+      }
+  }
 }
