--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -97,7 +97,8 @@
 .syntax--punctuation.syntax--curlybrace,
 .syntax--punctuation.syntax--bracket,
 .syntax--punctuation.syntax--parenthesis,
-.syntax--punctuation.syntax--scope {
+.syntax--punctuation.syntax--scope,
+.syntax--punctuation.syntax--array {
     color: @syntax-bracket;
 }
 
