--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -1,23 +1,23 @@
 .syntax--html, .syntax--xml {
-  .syntax--tag {
+  &.syntax--tag {
     color: @blue;
   }
 
-  .syntax--attribute-name {
+  &.syntax--attribute-name {
       color: @violet;
   }
 
-  .syntax--punctuation.syntax--definition {
+  &.syntax--punctuation.syntax--definition {
     color: @magenta;
   }
-  .syntax--string {
+  &.syntax--string {
     color: @cyan;
 
     &.syntax--punctuation {
         color: inherit;
     }
   }
-  .syntax--doctype {
+  &.syntax--doctype {
       color: @yellow;
   }
 }
