--- a/index.less
+++ b/index.less
@@ -16,7 +16,7 @@
 @import "styles/languages/makefile";
 @import "styles/languages/markdown";
 //@import "styles/languages/markup";
-//@import "styles/languages/php";
+@import "styles/languages/php";
 //@import "styles/languages/ruby";
 //@import "styles/languages/scala";
 @import "styles/languages/shell";
