--- a/index.less
+++ b/index.less
@@ -8,7 +8,7 @@
 @import "styles/languages/_base";
 @import "styles/languages/batch";
 @import "styles/languages/c";
-//@import "styles/languages/coffee";
+@import "styles/languages/coffee";
 @import "styles/languages/css.less";
 //@import "styles/languages/go";
 @import "styles/languages/html";
@@ -19,3 +19,16 @@
 //@import "styles/languages/ruby";
 //@import "styles/languages/scala";
 @import "styles/languages/shell";
+
+// TODO coffeescript
+// TODO go
+// TODO ruby
+// TODO scala
+// TODO rust
+// TODO c++
+// TODO HTML/mustache
+// TODO JSON
+// TODO YAML
+// TODO Perl
+// TODO Sql
+// TODO typescript
