--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -18,6 +18,10 @@
   .syntax--punctuation.syntax--definition.syntax--char {
       color: @syntax-color-value;
   }
+
+  &.syntax--regexp {
+      color: @magenta;
+  }
 }
 
 .syntax--constant {
