--- a/index.less
+++ b/index.less
@@ -19,8 +19,8 @@
 //@import "styles/languages/ruby";
 //@import "styles/languages/scala";
 @import "styles/languages/shell";
+@import "styles/languages/typescript";
 
-// TODO coffeescript
 // TODO go
 // TODO ruby
 // TODO scala
@@ -31,4 +31,4 @@
 // TODO YAML
 // TODO Perl
 // TODO Sql
-// TODO typescript
+ 
