--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -106,6 +106,10 @@
     color: @syntax-bracket;
 }
 
+.syntax--punctuation.syntax--key-value.syntax--separator {
+    color: @orange;
+}
+
 .syntax--terminator {
     color: @syntax-comment-color;
 }
