--- a/index.less
+++ b/index.less
@@ -19,6 +19,7 @@
 //@import "styles/languages/ruby";
 //@import "styles/languages/scala";
 @import "styles/languages/shell";
+@import "styles/languages/toml";
 @import "styles/languages/typescript";
 
 // TODO go
