--- a/index.less
+++ b/index.less
@@ -10,7 +10,7 @@
 @import "styles/languages/c";
 @import "styles/languages/coffee";
 @import "styles/languages/css.less";
-//@import "styles/languages/go";
+@import "styles/languages/go";
 @import "styles/languages/html";
 @import "styles/languages/javascript";
 @import "styles/languages/makefile";
@@ -22,10 +22,10 @@
 @import "styles/languages/toml";
 @import "styles/languages/typescript";
 
-// TODO go
 // TODO ruby
 // TODO scala
 // TODO rust
 // TODO c++
 // TODO Perl
 // TODO Sql
+  
