--- a/index.less
+++ b/index.less
@@ -16,16 +16,14 @@
 @import "styles/languages/makefile";
 @import "styles/languages/markdown";
 @import "styles/languages/php";
-//@import "styles/languages/ruby";
+@import "styles/languages/ruby";
 //@import "styles/languages/scala";
 @import "styles/languages/shell";
 @import "styles/languages/toml";
 @import "styles/languages/typescript";
 
-// TODO ruby
 // TODO scala
 // TODO rust
 // TODO c++
 // TODO Perl
 // TODO Sql
-  
