--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -102,7 +102,8 @@
 .syntax--punctuation.syntax--bracket,
 .syntax--punctuation.syntax--parenthesis,
 .syntax--punctuation.syntax--scope,
-.syntax--punctuation.syntax--array {
+.syntax--punctuation.syntax--array,
+.syntax--punctuation.syntax--function {
     color: @syntax-bracket;
 }
 
