--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -96,6 +96,7 @@
 }
 
 .syntax--meta.syntax--brace,
+.syntax--meta.syntax--bracket,
 .syntax--bracket.syntax--round,
 .syntax--punctuation.syntax--definition,
 .syntax--punctuation.syntax--curlybrace,
@@ -107,6 +108,7 @@
     color: @syntax-bracket;
 }
 
+.syntax--meta.syntax--colon,
 .syntax--punctuation.syntax--key-value.syntax--separator {
     color: @orange;
 }
