--- a/index.less
+++ b/index.less
@@ -9,6 +9,7 @@
 @import "styles/languages/batch";
 @import "styles/languages/c";
 @import "styles/languages/coffee";
+@import "styles/languages/cplusplus";
 @import "styles/languages/css.less";
 @import "styles/languages/go";
 @import "styles/languages/html";
@@ -22,5 +23,3 @@
 @import "styles/languages/typescript";
 
 // TODO rust
-// TODO c++
-// TODO Perl
