--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -109,6 +109,8 @@
 }
 
 .syntax--meta.syntax--colon,
+.syntax--punctuation.syntax--double-colon,
+.syntax--punctuation.syntax--arrow,
 .syntax--punctuation.syntax--key-value.syntax--separator {
     color: @orange;
 }
