--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -62,7 +62,6 @@
   color: @syntax-color-function;
 }
 
-// ??
 .syntax--attribute-name {
     color: @syntax-color-attribute;
 }
@@ -108,6 +107,7 @@
 }
 
 .syntax--meta.syntax--colon,
+.syntax--punctuation.syntax--colon,
 .syntax--punctuation.syntax--double-colon,
 .syntax--punctuation.syntax--arrow,
 .syntax--punctuation.syntax--key-value.syntax--separator {
