fix #13 (c# attribute brackets)

--- a/styles/languages/_base.less
+++ b/styles/languages/_base.less
@@ -95,6 +95,7 @@
 
 .syntax--meta.syntax--brace,
 .syntax--meta.syntax--bracket,
+.syntax--meta.syntax--colon,
 .syntax--bracket.syntax--round,
 .syntax--punctuation.syntax--definition,
 .syntax--punctuation.syntax--curlybrace,
@@ -102,16 +103,13 @@
 .syntax--punctuation.syntax--parenthesis,
 .syntax--punctuation.syntax--scope,
 .syntax--punctuation.syntax--array,
-.syntax--punctuation.syntax--function {
-    color: @syntax-bracket;
-}
-
-.syntax--meta.syntax--colon,
+.syntax--punctuation.syntax--function,
 .syntax--punctuation.syntax--colon,
 .syntax--punctuation.syntax--double-colon,
 .syntax--punctuation.syntax--arrow,
+.syntax--punctuation.syntax--squarebracket,
 .syntax--punctuation.syntax--key-value.syntax--separator {
-    color: @orange;
+    color: @syntax-bracket;
 }
 
 .syntax--terminator {
