fix styling with language-html tree-sitter parsing

--- a/styles/languages/javascript.less
+++ b/styles/languages/javascript.less
@@ -3,4 +3,8 @@
     .syntax--storage.syntax--type {
         color: @syntax-color-keyword;
     }
+
+    .syntax--tag {
+        color: @syntax-color-tag;
+    }
 }
