fix mustache colors in textmate parsing

--- a/styles/languages/html.less
+++ b/styles/languages/html.less
@@ -1,4 +1,5 @@
-.syntax--html:not(.syntax--js), .syntax--xml:not(.syntax--js) {
+.syntax--html:not(.syntax--js):not(.syntax--mustache),
+.syntax--xml:not(.syntax--js):not(.syntax--mustache) {
   & > .syntax--tag {
     color: @blue;
   }
