some html/js fixes

--- a/code-samples/mustache.mustache
+++ b/code-samples/mustache.mustache
@@ -5,7 +5,7 @@
         {{#faces}}
         <p class="smiley">Smiley face: {{name}}</p>
         {{/faces}}
-        <div>{{missing?}}</div>
+        <div>&ldquo;{{missing?}}&rdquo;</div>
     </body>
     <script>
         /*
